--- a/public/swagger/index.html
+++ b/public/swagger/index.html
@@ -39,7 +39,7 @@
     window.onload = function() {
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
-        url: "https://galihtictactoephp.herokuapp.com/v1/docs ",
+        url: "http://galihtictactoephp.herokuapp.com/v1/docs ",
         dom_id: '#swagger-ui',
         deepLinking: true,
         presets: [
